--- a/cruddjango/app/templates/app/show.html
+++ b/cruddjango/app/templates/app/show.html
@@ -13,6 +13,8 @@
     <tr>  
         <th>Student ID</th>  
         <th>Student Name</th>  
+        <th>Date of birth</th>
+        <th>Gender</th>
         <th>Student Email</th>  
         <th>Student Contact</th>  
         <th>Actions</th>  
@@ -22,7 +24,9 @@
 {% for student in students %}  
     <tr>  
         <td>{{ student.student_id }}</td>  
-        <td>{{ student.full_name }}</td>  
+        <td>{{ student.full_name }}</td> 
+        <td>{{ student.dob }}</td> 
+        <td>{{ student.gender }}</td>  
         <td>{{ student.email }}</td>  
         <td>{{ student.address }}</td>  
         <td>  
